Update several soon-to-be-deprecated lines of code