@@ -2421,7 +2421,7 @@ public final class BrowserMenuBar extends JMenuBar implements KeyEventDispatcher
           try {
             // L&F description is only available from class instance
             Class<?> cls = Class.forName(element.getClassName());
-            Object o = cls.newInstance();
+            Object o = cls.getDeclaredConstructor().newInstance();
             if (o instanceof LookAndFeel) {
               dbmi.setToolTipText(((LookAndFeel) o).getDescription());
             }
